# advent2025

./: .env.example  README.md  pyproject.toml  pytest.ini
advent/: initializer.py
advent/day1/: solver.py  task.html  test_solver.py
advent/day10/: solver.py  task.html  test_solver.py
advent/day11/: solver.py  task.html  test_solver.py
advent/day2/: solver.py  task.html  test_solver.py
advent/day3/: solver.py  task.html  test_solver.py
advent/day4/: solver.py  task.html  test_solver.py
advent/day5/: solver.py  test_solver.py
advent/day6/: solver.py  task.html  test_solver.py
advent/day7/: solver.py  task.html  test_solver.py
advent/day8/: solver.py  task.html  test_solver.py
advent/day9/: solver.py  task.html  test_solver.py
